src/objects/Aircraft__c.object
<CustomObject>
    <fields>
        <fullName>Seating_Configuration__c</fullName>
        <label>Seating Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 captains chairs</fullName>
                </value>
                <value>
                    <fullName>10 captains chairs + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>10 captains chairs + 3-person divan</fullName>
                </value>
                <value>
                    <fullName>10 captains chairs + 3-person divan + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>10 captains chairs + 4-person divan</fullName>
                </value>
                <value>
                    <fullName>10 captains chairs + 4-person divan + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>10 captains chairs + two 2-person divans</fullName>
                </value>
                <value>
                    <fullName>11 captains chairs</fullName>
                </value>
                <value>
                    <fullName>11 captains chairs + 3-person divan</fullName>
                </value>
                <value>
                    <fullName>11 captains chairs + 3-person divan + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>11 captains chairs + 3-person divan + 4-person divan</fullName>
                </value>
                <value>
                    <fullName>12 captains chairs</fullName>
                </value>
                <value>
                    <fullName>12 captains chairs + 3-person divan</fullName>
                </value>
                <value>
                    <fullName>12 captains chairs + 4-person divan</fullName>
                </value>
                <value>
                    <fullName>13 captains chairs</fullName>
                </value>
                <value>
                    <fullName>14 captains chairs</fullName>
                </value>
                <value>
                    <fullName>15 captains chairs</fullName>
                </value>
                <value>
                    <fullName>16 captains chairs</fullName>
                </value>
                <value>
                    <fullName>4 captains chairs</fullName>
                </value>
                <value>
                    <fullName>4 captains chairs + one-side facing seat</fullName>
                </value>
                <value>
                    <fullName>4 captains chairs + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>4 captains chairs + 3-person divan</fullName>
                </value>
                <value>
                    <fullName>5 captains chairs</fullName>
                </value>
                <value>
                    <fullName>5 captains chairs + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>5 captains chairs + 3-person divan</fullName>
                </value>
                <value>
                    <fullName>6 captains chairs</fullName>
                </value>
                <value>
                    <fullName>6 captains chairs + 2-person divan</fullName>
                </value>
                <value>
                    <fullName>6 captains chairs + 3-person divan</fullName>
                </value>
                <value>
                    <fullName>6 captains chairs + 4-person divan</fullName>
                </value>
                <value>
                    <fullName>6 captains chairs + one 3-person divan + two 2-person divans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shoes_in_Cabin__c</fullName>
        <label>Shoes in Cabin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ski_Tube_Storage__c</fullName>
        <label>Ski Tube Storage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smoking__c</fullName>
        <label>Smoking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talk_Text__c</fullName>
        <label>Talk &amp; Text</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Talk_Cost__c</fullName>
        <label>Text &amp; Talk Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free Text, Talk, &amp; Email</fullName>
                </value>
                <value>
                    <fullName>Free Text &amp; Email; Talk $1.60/min Domestic &amp; International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hourly_Rate__c</fullName>
        <formula>(Retail_Hourly_Rate__c) + (Fuel_Surcharge__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trackable__c</fullName>
        <label>Trackable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Twin_Engine__c</fullName>
        <label>Twin Engine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Two_Pilots__c</fullName>
        <label>Two Pilots</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Monitors__c</fullName>
        <label>Video Monitors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wet_Runway_Restricted__c</fullName>
        <label>Wet Runway Restricted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WiFi_Cost__c</fullName>
        <label>WiFi Cost</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic FREE &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic $3.00/MB &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic $7.00/MB &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic $7.50/MB &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic $7.95/MB &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic $7.99/MB &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic $8.95/MB &amp; NO International</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $10/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $12/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $7.00/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $7.50/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $7.95/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $8.00/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $8.95/MB per device</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International $10.95/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic &amp; International FREE</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $2.00/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $5.00/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $7.50/minute</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $7.95/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $8.95/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $9.95/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $10.00/MB</fullName>
                </value>
                <value>
                    <fullName>Domestic FREE &amp; International $10.50/MB</fullName>
                </value>
                <value>
                    <fullName>$200 per flight hour (Pre-Paid)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WiFi_Notes__c</fullName>
        <label>WiFi Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WiFi__c</fullName>
        <label>WiFi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XM_Radio__c</fullName>
        <label>XM Radio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Delivery_YOD__c</fullName>
        <label>Year of Delivery (YOD)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_of_Manufacture__c</fullName>
        <label>Year of Manufacture (YOM)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iPod_Docking_Station__c</fullName>
        <label>iPod Docking Station</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Lavs_Onboard__c</fullName>
        <label># of Lavs Onboard</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Oxygen_Masks_Available__c</fullName>
        <label># of Oxygen Masks Available</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Aircraft</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operator__c</columns>
        <columns>Aircraft_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Aircraft</fullName>
        <columns>NAME</columns>
        <columns>Operator__c</columns>
        <columns>Aircraft_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Aircraft_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>All Active Aircraft</label>
    </listViews>
    <listViews>
        <fullName>EJM_Aircraft</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Aircraft_Type__c</columns>
        <columns>Year_of_Manufacture__c</columns>
        <columns>Passenger_Seats__c</columns>
        <columns>Internal_Luggage_Storage_cu_ft__c</columns>
        <columns>WiFi__c</columns>
        <columns>Smoking__c</columns>
        <columns>Pets_in_Cabin__c</columns>
        <columns>Retail_Hourly_Rate__c</columns>
        <columns>Fuel_Surcharge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Operator__c</field>
            <operation>equals</operation>
            <value>executive jet management</value>
        </filters>
        <label>EJM Aircraft</label>
        <sharedTo>
            <group>Current_AP_Employees</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Tail Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Layout_Notes</fullName>
        <active>true</active>
        <description>If Other Layout is selected you must provide notes.</description>
        <errorConditionFormula>AND( ISPICKVAL(Seating_Configuration__c, &quot;Other&quot;) , ISBLANK(Seating_Configuration_Notes__c))</errorConditionFormula>
        <errorDisplayField>Seating_Configuration_Notes__c</errorDisplayField>
        <errorMessage>If Other Layout is selected you must provide notes.</errorMessage>
    </validationRules>
</CustomObject>